Setting a min-width of 850px on the RQ6 sheet, attempting to fix rendering on tablets and this is the min width to avoid problems on desktop too

--- a/Runequest_6/Runequest_6.css
+++ b/Runequest_6/Runequest_6.css
@@ -21,11 +21,15 @@ div[class^="repcontrol"] {
 }
 div[class="repcontainer editmode"] ~ div[class^="repcontrol"] button[class="btn repcontrol_add"] {
     display: inline-block!important;
-	visibility: hidden;
+	  visibility: hidden;
 }
 
 
 /* Layout CSS */
+div.sheet-wrapper {
+    min-width: 850px;
+}
+
 div.sheet-section {
     border-radius: 15px;
     border: 1px solid black;
